--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Create Fabric
-	modImplementation("com.simibubi.create:create-fabric-${minecraft_version}:${create_fabric_version}")
+	modCompileOnly("com.simibubi.create:create-fabric-${minecraft_version}:${create_fabric_version}")
 
 	// Mod Menu
 	modImplementation("com.terraformersmc:modmenu:${modmenu_version}")
